# obicho

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
lib/: main.js  test.js
src/: bets.rs  bicho.rs  enums.rs  extract.rs  lib.rs  scraper.rs  users.rs
src/tests/: mod.rs
