[package]
name = "obicho"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoize = "0.1.9"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
bincode = "0.9.2"
serde_derive = "1.0.130"
serde = "1.0.130"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
